// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expense Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     totalling 
    $100
  </h1>
</div>
`;

exports[`Should render Expenses Summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1
  </h1>
</div>
`;
